--- a/ecrc-procs/hybrid_learning_net.tex
+++ b/ecrc-procs/hybrid_learning_net.tex
@@ -1058,8 +1058,8 @@ from this experiment would be:
 	\item The HLN architecture 
 		learns much faster than the 
 		FCN.
-	\item We find the pretraining
-		with unlabeled data do improve 
+	\item The pretraining
+		with unlabeled data does improve 
 		the performance of HLN, however 
 		the improvement is limited.
 	\item A constant learning rate is
