--- a/ecrc-procs/ref.bib
+++ b/ecrc-procs/ref.bib
@@ -480,3 +480,11 @@ information).
 			    pages={1929--1958},
 				  year={2014}
 }
+@incollection{bottou2010large,
+	  title={Large-scale machine learning with stochastic gradient descent},
+	    author={Bottou, L{\'e}on},
+		  booktitle={Proceedings of COMPSTAT'2010},
+		    pages={177--186},
+			  year={2010},
+			    publisher={Springer}
+}
